--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
 
 Python/price_elasticity_demand/dataset/DatafinitiElectronicsProductsPricingData_with_category.csv
 Python/price_elasticity_demand/dataset/DatafinitiElectronicsProductsPricingData.csv
+Python/price_elasticity_demand/dataset/DatafinitiElectronicsProductsPricingData_Cleaned_dataset.csv
